manifests/backstage-pre/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: backstage-service
  namespace: backstage
  annotations:
    # cloud.google.com/backend-config: 
    cloud.google.com/neg: '{"ingress": true}'

spec:
  type: ClusterIP
  ports:
    - port: 443
      targetPort: 7007
  selector:
    app: backstage
