manifests/backstage-pre/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backstage-ingress-2
  namespace: backstage
  annotations:
    networking.gke.io/managed-certificates: backstage-cert
    networking.gke.io/v1beta1.FrontendConfig: gke-frontendconfig
spec:
  defaultBackend:
    service:
      name: backstage-service
      port:
        number: 443
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backstage-service
            port:
              number: 443
